--- a/app/styles/yuga-admin.less
+++ b/app/styles/yuga-admin.less
@@ -234,7 +234,7 @@ h6 {
     top: 0;
     left: 0;
     bottom: 0;
-    width: 200px;
+    width: 25%;
 
     .list-title {
         cursor: pointer;
@@ -372,7 +372,7 @@ h6 {
 .edit-screen {
     position: absolute;
     top: 0;
-    left: 200px;
+    width:75%;
     bottom: 0;
     right: 0;
 }
@@ -500,3 +500,9 @@ h6 {
 }
 
 /** END WEBKIT SCROLLBAR */
+
+
+.ui-widget-content {
+    background-color: #ffffff;
+}
+
