--- a/app/views/edit-aspect.html
+++ b/app/views/edit-aspect.html
@@ -1,14 +1,26 @@
 <section id="edit-aspect" class="edit-screen" ng-controller="EditAspectCtrl">
+    
     <div class="section-header">
         <div class="icon" ng-bind-html-unsafe="aspect.getType().icon" ng-style="{'color': '#' + aspect.color}"></div>
         <h3>{{aspect.name}}</h3>
     </div>
+
     <yg-drop-target yg-drop-callback="addEvent" data-yg-drop-accept=".event" class="section-body">
         <div ng-repeat="event in aspect.getEvents()">
             {{event.name}}
         </div>
 
-        <input id="colorpicker" type="text" yg-model="aspect.color" yg-model-element="aspect" />
+        <div class="btn-group">
+            <button type="button" class="btn btn-danger">Type</button>
+            <button type="button" class="btn btn-danger dropdown-toggle" data-toggle="dropdown">
+                <span class="caret"></span>
+            </button>
+            <ul class="dropdown-menu" role="menu">
+                <li ng-repeat="type in getTypes()"><a href="#"><span style="font-family:fontawesome;" ng-bind-html-unsafe="type.icon"></span> {{type.name}}</a></li>
+            </ul>
+        </div>
+
+        <input id="colorpicker" type="hidden" yg-model="aspect.color" yg-model-element="aspect" />
 
         <div ng-repeat="field in aspect.getType().fields">
             <label for="{{getFieldId(field)}}">{{field.name}}</label>
