--- a/app/styles/yuga-admin.less
+++ b/app/styles/yuga-admin.less
@@ -329,13 +329,13 @@ h6 {
             & > div {
                 &:nth-child(1) {
                     font-family: 'FontAwesome';
-                    width: 30px;
+                    width: 50px;
                     text-align: center;
                 }
 
                 &:nth-child(2) {
                     font-family: 'FontAwesome';
-                    width: 30px;
+                    width: 50px;
                     text-align: center;
                     display: none;
                 }
@@ -356,16 +356,28 @@ h6 {
 }
 
 .sortable {
-    /*padding-right: 25px;*/
+    cursor: pointer;
+    i {
+        margin-left: 1em;
+        display: none;
+    }
+    
+    &.asc {
+        i.icon-caret-up {
+            display: inline-block;
+        }
+    }
+
+    &.desc {
+        i.icon-caret-down {
+            display: inline-block;
+        }
+    }
 }
 
-.asc {
 
-}
 
-.desc {
 
-}
 
 /** */
 
