--- a/app/views/edit-event.html
+++ b/app/views/edit-event.html
@@ -7,7 +7,7 @@
         <label for="start">{{resourceBundle().START}}</label>
         <input type="text" name="start" id="start" yg-date yg-model-object="event"  yg-model-property="start" id="{{getFieldId(aspect, field)}}" />
 
-        <label for="end">{{resourceBundle().End}}</label>
+        <label for="end">{{resourceBundle().END}}</label>
         <input type="text" name="end" id="end" yg-date yg-model-object="event"  yg-model-property="end" />
 
         <label for="description">Description</label>
