--- a/app/views/header.html
+++ b/app/views/header.html
@@ -25,4 +25,6 @@
             </ul>
         </div>
     </nav>
+    <a href="" ng-click="addFilter()">Filter</a>
+    <a href="" ng-click="removeFilter()">Remove</a>
 </header>
