--- a/app/views/main.html
+++ b/app/views/main.html
@@ -1,6 +1,7 @@
 <ng-include src="'views/header.html'"></ng-include>
 
-<br/><br/>
+<br/><br/><br style="clear:both;"/>
+<ng-include src="'views/title-bar.html'"></ng-include>
 
 <div id="upper-container">
     <ng-include src="'views/elements-list.html'"></ng-include>
