replaced datepicker with ama3-anytime

--- a/app/styles/yuga-admin.less
+++ b/app/styles/yuga-admin.less
@@ -514,7 +514,15 @@ h6 {
 /** END WEBKIT SCROLLBAR */
 
 
+/* ************************************************************** */
+/* OVERRIDES */
+/* ************************************************************** */
+
 .ui-widget-content {
     background-color: #ffffff;
 }
 
+.AnyTime-pkr * {
+    box-sizing: content-box;
+    -moz-box-sizing: content-box;
+}
