--- a/app/views/timeline.html
+++ b/app/views/timeline.html
@@ -1,3 +1,4 @@
 <section id="timeline" ng-controller="TimelineCtrl">
-    <svg xmlns="http://www.w3.org/2000/svg" version="1.1" id="timeline-widget" width="100%" height="100%"></svg>
+    <div id="timeline-widget" style="position:absolute; width:100%; height:100%; overflow: hidden;"></div>
+    <!--<svg xmlns="http://www.w3.org/2000/svg" version="1.1" id="timeline-widget" width="100%" height="100%"></svg>-->
 </section>
