--- a/app/views/timeline.html
+++ b/app/views/timeline.html
@@ -1,4 +1,9 @@
 <section id="timeline" ng-controller="TimelineCtrl">
-    <div id="timeline-widget" style="position:absolute; width:100%; height:100%; overflow: hidden;"></div>
-    <!--<svg xmlns="http://www.w3.org/2000/svg" version="1.1" id="timeline-widget" width="100%" height="100%"></svg>-->
+    <div class="section-header">
+        <a href="javascript:void(0);" ng-click="zoomIn()">zoom in</a>
+        <a href="javascript:void(0);" ng-click="zoomOut()">zoom out</a>
+    </div>
+    <div class="section-body">
+        <div id="timeline-widget" style="position:absolute; width:100%; height:100%; overflow: hidden;"></div>
+    </div>
 </section>
