--- a/app/styles/yuga-admin.less
+++ b/app/styles/yuga-admin.less
@@ -497,6 +497,19 @@ h6 {
 .dropdown-submenu.pull-left{float:none;}
 .dropdown-submenu.pull-left>.dropdown-menu{left:-100%;margin-left:10px;-webkit-border-radius:6px 0 6px 6px;-moz-border-radius:6px 0 6px 6px;border-radius:6px 0 6px 6px;}*/
 
+.timeline-event {
+    height: 40px;
+    position: absolute;
+    .user-select(none);
+
+    .timeline-title {
+    }
+
+    .timeline-event-bar {
+        height: 10px;
+    }
+}
+
 .tick {
     position: absolute;
     z-index: 4;
