--- a/app/styles/yuga-admin.less
+++ b/app/styles/yuga-admin.less
@@ -502,6 +502,12 @@ h6 {
     position: absolute;
     .user-select(none);
 
+    &.selected {
+        .timeline-event-bar {
+            box-shadow: 10px 5px 5px #888888;
+        }
+    }
+
     .timeline-title {
     }
 
