secondary selection for timeline

--- a/app/styles/yuga-admin.less
+++ b/app/styles/yuga-admin.less
@@ -504,7 +504,13 @@ h6 {
 
     &.selected {
         .timeline-event-bar {
-            box-shadow: 10px 5px 5px #888888;
+            box-shadow: 5px 5px 1px #888888;
+        }
+    }
+
+    &.selected-secondary {
+        .timeline-event-bar {
+            box-shadow: 5px 5px 1px #ccc;
         }
     }
 
