--- a/app/views/edit-event.html
+++ b/app/views/edit-event.html
@@ -5,7 +5,7 @@
     </div>
     <yg-drop-target yg-drop-callback="addAspect" data-yg-drop-accept=".aspect" class="section-body">
         <label for="start">{{resourceBundle().START}}</label>
-        <input type="text" name="start" id="start" yg-date yg-model-object="event"  yg-model-property="start" id="{{getFieldId(localAspect, field)}}" />
+        <input type="text" name="start" id="start" yg-date yg-model-object="event"  yg-model-property="start" />
 
         <label for="end">{{resourceBundle().END}}</label>
         <input type="text" name="end" id="end" yg-date yg-model-object="event"  yg-model-property="end" />
