--- a/app/styles/yuga-admin.less
+++ b/app/styles/yuga-admin.less
@@ -528,6 +528,32 @@ h6 {
 .timeline-event-title {
 }
 
+.timeline-event-guide-left {
+    position: absolute;
+    top: 0px;
+    bottom: 0px;
+    border-right: 1px dotted #999;
+    display:none;
+    opacity: 0.9;
+}
+
+.timeline-event-guide-right {
+    position: absolute;
+    top: 0px;
+    bottom: 0px;
+    border-left: 1px dotted #999;
+    display:none;
+    opacity: 0.9;
+}
+
+.timeline-event-guide-label {
+    font-size: 0.7em;
+    background-color: #999;
+    color: #fff;
+    white-space: nowrap;
+    padding: 0.5em;
+}
+
 .timeline-event-bar {
     height: 5px;
     position: absolute;
