correct labels for dragging events

--- a/app/styles/yuga-admin.less
+++ b/app/styles/yuga-admin.less
@@ -535,6 +535,7 @@ h6 {
     border-right: 1px dotted #999;
     display:none;
     opacity: 0.9;
+    .user-select(none);
 }
 
 .timeline-event-guide-right {
@@ -544,6 +545,7 @@ h6 {
     border-left: 1px dotted #999;
     display:none;
     opacity: 0.9;
+    .user-select(none);
 }
 
 .timeline-event-guide-label {
@@ -552,6 +554,7 @@ h6 {
     color: #fff;
     white-space: nowrap;
     padding: 0.5em;
+    .user-select(none);
 }
 
 .timeline-event-bar {
