beginning delete objects

--- a/app/styles/yuga-admin.less
+++ b/app/styles/yuga-admin.less
@@ -247,15 +247,18 @@ h6 {
     width: 25%;
 
     .list-title {
+        text-align: right;
         cursor: pointer;
+        clear: both;
         h5 {
-            display: inline-block;
+            float: left;
         }
     }
 
     .list {
         position: relative;
         font-size: 0.9em;
+        clear: both;
 
         .list-header {
             position: relative;
